--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <!--HEADER-->
         <header>
-            <div class="logo">MEU LOGO</div>
+            <div class="logo">SPOTIFY DA LARI ^^</div>
 
             <nav>
                 <a href="#">Premium</a>
@@ -50,8 +50,14 @@
             
             <div class="playlist-card">
                 <div class="thumb"></div>
-                <p class="title">Workout</p>
-                <p class="desc">Energia para treinar</p>
+                <p class="title">KICKASS METAL</p>
+                <p class="desc">Descubra o melhor do Metal</p>
+            </div>
+
+            <div class="playlist-card">
+                <div class="thumb"></div>
+                <p class="title">This is RADIOHEAD</p>
+                <p class="desc">RADIOHEAD no seu melhor</p>
             </div>
           </div>  
         </section>
